--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "mysql2": "^2.0.0",
     "path": "^0.12.7",
     "sequelize": "^5.21.2"
   }
