comics and users model
build comics and user model without making relations

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "development": {
         "connection": {
             "host": "localhost",
-            "database": "test_one",
+            "database": "mywt",
             "username": "root",
             "password": ""
         }
